# P5_asphalt_robot

./: .gitignore  README.md
Image_aquisistion/: Make_new_crack.py  Test_of_camera.py  crack_sort.py  encoder.ino  image_details.json  sort_image.py
Image_aquisistion/camera_calibration/: camera_intrinsics.py
Image_aquisistion/encoder/: encoder.ino
Image_aquisistion/encoder/encoder_copy/: encoder_copy.ino
Training/: Better_images.py  Video2PNG.py  test.py  train.py
Training/utils/: CameraCalibration.py  dataset.py  features.py  model.py  utils.py
UDP/: UDP_Com.cpp  client.cpp  server.cpp
UDP/include/: UDP_Com.h
cad_files/: 5barrobot.wrl  5barrobot_ver-97.wrl  WIP_full_webots_world.wbt
controllers/: CMakeLists.txt  package.xml
controllers/Itsa_me_pain_again/: Controller.cpp  Encoder.cpp  Itsa_me_pain_again  Itsa_me_pain_again.cpp  Makefile  MotionPlanning.cpp  TimeLog.txt
controllers/Itsa_me_pain_again/include/: Controller.h  Encoder.h  MotionPlanning.h  Point.h
controllers/src/: subscriber_test.cpp
controllers/worlds/: .World_final.wbproj  World_final.wbt
encoder_odometry/: CMakeLists.txt  package.xml
encoder_odometry/launch/: robot_system.launch
encoder_odometry/src/: encoder_checker.py  encoder_odom_node.cpp
new_controller/: CMakeLists.txt  image_details.json  package.xml
new_controller/Long_Crack_for_testing/: wolowolo.py
new_controller/controllers/: basic_moveRead_test.cpp  crack_movement.cpp  load_image_withoffset.cpp  manipulator_controller.cpp
new_controller/launch/: controller.launch  webot_world.launch  webots_no_controller.launch
new_controller/msg/: motor_pos.msg  trajectory_polynomial.msg
new_controller/src/: manipulator_controller.cpp  time_server_node.cpp
new_controller/srv/: display_movement.srv  set_pos.srv
new_controller/worlds/: .we_try.wbproj  Fivebar_2021version.wbt  Fivebar_2022version.wbt  Fivebar_2022version_new.wbt  Fivebar_2023version.wbt  WIP_full_webots_world.wbt  WIP_new_cadfile.wrl  we_try.wbt
omg_i_need_this/: CMakeLists.txt  package.xml
omg_i_need_this/src/: HEAJK  HEAJK.cpp
preliminary_tests/: CMakeLists.txt  package.xml
preliminary_tests/precision test results/: accuracy_test.m  accuracy_test1.txt  accuracy_test2.txt  accuracy_test3.txt  accuracy_test4.txt  accuracy_test5.txt  accuracy_test_1.txt  accuracy_test_2.txt  accuracy_test_3.txt  accuracy_test_4.txt  accuracy_test_5.txt
preliminary_tests/src/: motor_postest.cpp  position_test.cpp
trajectory_generation/: CMakeLists.txt  package.xml
trajectory_generation/msg/: vision_out.msg
trajectory_generation/src/: trajectory_generation_node.cpp
vision/: CMakeLists.txt  package.xml
vision/launch/: generate_pkl.launch  start_system.launch
vision/msg/: vision_out.msg
vision/src/: display.py  image_aligner.py  image_stitcher.py  model_utils.py  now_this.cpp  path_test_result.py  pythontime.py  trajectory_planning.py  vision.py  vision_loader_node.py  vision_node.py  vision_out.pkl
vision/srv/: Display_input.srv  Draw_workspace.srv
vision_package/: CMakeLists.txt  package.xml
vision_package/msg/: vision_out.msg
vision_package/src/: image_aligner.py  model_utils.py  vision.py
